# werckmeister

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  README.md~  Requirements.txt  Roadmap.md  SC8850.ods  THIRD_PARTY_LICENSES.md  build.sh  chordtest.sheet  chrodtest.sheet  commands.md  country-schlager-1.sheet  createManual.py  defaultInstruments.sheet  disco.sheet  ennio.sheet  guitarChords.sheet  ido.sheet  manual.in.md  manual.md  otherSources.md  package.in.json  packauxiliaries.py  purdie.sheet  scratch.sheet  scratch.sheet.mid  test.md  testmidi.mid  version.in.txt  veryfirst.sheet
src/: CMakeLists.txt  CompilerProgramOptions.cpp  CompilerProgramOptions.h  DiConfig.h  FactoryConfig.h  ICompilerProgramOptions.h  IPlayerProgramOptions.h  PlayerProgramOptions.cpp  PlayerProgramOptions.h  SheetCompilerProgram.cpp  SheetCompilerProgram.h  SheetCompilerProgramJs.cpp  SheetCompilerProgramJs.h  SheetLibProgram.cpp  SheetLibProgram.h  SheetPlayerProgram.cpp  SheetPlayerProgram.h  forward.hpp  libwerckmeister.cpp  libwerckmeister.h  sheet.cpp  sheet.h  sheet_main.cpp  sheetcompiler_main.cpp  sheetcompiler_main_old.cpp  sheetjs_main.cpp  sheetplayer_main copy.cpp  sheetplayer_main.cpp  sheettest_main.cpp  win32_kill_process_main.cpp
src/app/: ADocumentWriter.cpp  ADocumentWriter.h  AMidiBackend.h  DiContainerWrapper.h  DummyFileWriter.h  FluidSynthBackend.cpp  FluidSynthBackend.h  FluidSynthWrapper.cpp  FluidSynthWrapper.h  FluidSynthWriter.cpp  FluidSynthWriter.h  Funkfeuer.cpp  Funkfeuer.h  IDocumentWriter.h  IPlayerLoopVisitor.h  ISheetWatcherHandler.h  IStringSender.hpp  JsonIOBase.cpp  JsonIOBase.h  JsonStringInputReader.cpp  JsonStringInputReader.hpp  JsonWriter.cpp  JsonWriter.h  MidiBackendContainer.cpp  MidiBackendContainer.h  MidiFileWriter.cpp  MidiFileWriter.h  MidiPlayer.cpp  MidiPlayer.h  NullStringSender.hpp  PlayerTimePrinter.cpp  PlayerTimePrinter.h  RTMidiBackend.cpp  RTMidiBackend.h  SheetWatcher.cpp  SheetWatcher.h  TimelineVisitor.hpp  UdpSender.cpp  UdpSender.hpp  boostTimer.cpp  (+9 more)
src/com/: AConvertsArgumentsToParameter.cpp  AConvertsArgumentsToParameter.h  ConsoleLogger.cpp  ConsoleLogger.h  DefinitionsServer.cpp  DefinitionsServer.h  FileLogger.cpp  FileLogger.h  GmInstrumentNames.cpp  GmInstrumentNames.h  IDefinitionsServer.h  IHasParameter.h  ILogger.h  IRegisterable.h  OnLeavingScope.hpp  Parameter.h  TemplateMetaHelper.h  common.cpp  common.hpp  config.hpp  config.hpp.in  exception.cpp  exception.hpp  literals.cpp  literals.hpp  midi.cpp  midi.hpp  tools.cpp  tools.h  tween.h  units.hpp  werckmeister.cpp  werckmeister.hpp
src/compiler/: AContext.cpp  AContext.h  ASheetEventRenderer.h  Compiler.cpp  Compiler.h  CompoundVisitor.hpp  ContextEvents.h  DefaultCompilerVisitor.h  DefinitionsServer.cpp  DefinitionsServer.h  EventInformationServer.cpp  EventInformationServer.h  EventLogger.h  ICompiler.h  ICompilerVisitor.h  IDefinitionsServer.h  IEventInformationServer.h  IEventLogger.h  IPhraseRenderer.h  IPreprocessor.h  ISheetNavigator.h  ISheetTemplateRenderer.h  IWarningsCollection.h  Instrument.cpp  Instrument.h  LoggerAndWarningsCollector.h  MidiContext.cpp  MidiContext.h  PhraseRenderer.cpp  PhraseRenderer.h  Preprocessor.cpp  Preprocessor.h  SheetEventRenderer.cpp  SheetEventRenderer.h  SheetNavigator.cpp  SheetNavigator.h  SheetTemplateRenderer.cpp  SheetTemplateRenderer.h  Warning.cpp  Warning.hpp  (+32 more)
src/conductionsPerformer/: ConductionsPerformer.cpp  ConductionsPerformer.h  IConductionsPerformer.h
src/conductor/: ConductionsPerformer.cpp  ConductionsPerformer.h  IConductionsPerformer.h  OnBeat.cpp  conductorNames.h
src/documentModel/: AliasPitchDef.h  Argument.h  Document.cpp  Document.h  DocumentConfig.h  DocumentUsing.h  PitchDef.h  Pitchmap.h  SheetDef.h  SheetTemplate.cpp  SheetTemplate.h
src/fm/: AConvertsArgumentsToParameter.cpp  AConvertsArgumentsToParameter.h  ConsoleLogger.cpp  ConsoleLogger.h  DefinitionsServer.cpp  DefinitionsServer.h  IDefinitionsServer.h  IHasParameter.h  ILogger.h  IRegisterable.h  Parameter.h  SheetTemplateDefServer.h  TemplateMetaHelper.h  common.cpp  common.hpp  config.hpp  config.hpp.in  exception.cpp  exception.hpp  literals.cpp  literals.hpp  midi.cpp  midi.hpp  tools.cpp  tools.h  tween.h  units.hpp  werckmeister.cpp  werckmeister.hpp
src/fmapp/: ADocumentWriter.cpp  ADocumentWriter.h  AMidiBackend.h  AMidiProvider.h  DiContainerWrapper.h  FluidSynthBackend.cpp  FluidSynthBackend.h  FluidSynthWrapper.cpp  FluidSynthWrapper.h  Funkfeuer.cpp  Funkfeuer.h  IDocumentWriter.h  IPlayerLoopVisitor.h  ISheetWatcherHandler.h  IStringSender.hpp  JsonIOBase.cpp  JsonIOBase.h  JsonStringInputReader.cpp  JsonStringInputReader.hpp  JsonWriter.cpp  JsonWriter.h  JsonWriterBase.cpp  JsonWriterBase.h  MidiAndTimeline.hpp  MidiBackendContainer.cpp  MidiBackendContainer.h  MidiFileWriter.cpp  MidiFileWriter.h  MidiPlayer.cpp  MidiPlayer.h  NullStringSender.hpp  PlayerTimePrinter.cpp  PlayerTimePrinter.h  RTMidiBackend.cpp  RTMidiBackend.h  SheetWatcher.cpp  SheetWatcher.h  TimelineVisitor.hpp  UdpSender.hpp  boostTimer.cpp  (+19 more)
src/lua/: ALuaObject.cpp  ALuaObject.h  ALuaScript.cpp  ALuaScript.h  ALuaWithParameter.cpp  ALuaWithParameter.h  FluidWriterPerformer.cpp  FluidWriterPerformer.h  IPerformerScript.h  PerfomerScript.cpp  PerformerScript.h  luaHelper.h
src/parser/: IDocumentParser.h  chordDefParser.cpp  conductionSheet.cpp  conductionSheetParser.cpp  documentParser.cpp  error.hpp  extendedPitchSymbols.cpp  extendedPitchSymbols.h  lexer.h  parser.h  parserPositionIt.h  parserSymbols.h  pitchParser.cpp  pitchParser.h  pitchmapParser.cpp  sheetParser.cpp  styleSheetParser.cpp  valueParser.cpp  valueParser.h
src/sheet/: ASheetObject.hpp  AliasPitchDef.h  Argument.h  ChordDef.cpp  ChordDef.h  DirectVoicingStrategy.cpp  DirectVoicingStrategy.h  Document.cpp  Document.h  DocumentConfig.h  DocumentUsing.h  Event.cpp  Event.h  IVoiceStrategy.h  Interval.h  PitchDef.h  Pitchmap.h  SheetDef.h  SheetTemplate.cpp  SheetTemplate.h  SimpleGuitar.cpp  SimpleGuitar.h  StyleDef.h  (+6 more)
(+1131 files in other folders)
